# fdf

./: CMakeLists.txt  Makefile  a.out  calculate.c  checks.c  clears.c  colors.c  correction  draw.c  drawmap.c  errors.c  fdf.h  info  iso.c  main.c  map.fdf  read.c
libft/: ft_countwords.c  get_next_line.c  libft.h
